2024, day7, phase two